--- a/action.yml
+++ b/action.yml
@@ -1,15 +1,11 @@
-name: "Naja Design Regress"
-description: "Synthesize Verilog with Yosys, and test and analyze with Najaeda."
-author: "najaeda"
+name: "Keplertech Formal"
+description: ""
+author: "keplertech"
 branding:
   icon: "bar-chart-2"
   color: "blue"
 
 inputs:
-  mode:
-    description: "Mode of operation: 'direct' for direct synthesis, 'orfs' for ORFS synthesis"
-    required: true
-    default: "orfs"
   design_home:
     description: "Path to the design home"
     required: true
@@ -21,6 +17,5 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.mode }}
     - ${{ inputs.design_home }}
     - ${{ inputs.design_config }}
